# nninfer

./: .gitignore  CMakeLists.txt
include/: math_op.h  shape.h  tensor.h
include/layer/: base_layer.h  bn_layer.h  conv_layer.h  pool_layer.h
include/ops/: batch_norm.h  convolution.h  max_pool.h  utils.h
src/: main.cpp  tensor.cpp
src/layer/: base_layer.cpp  bn_layer.cpp  conv_layer.cpp  pool_layer.cpp
test/: CMakeLists.txt  test_layer.cpp  test_ops.cpp  test_tensor.cpp
